@@ -9,6 +9,7 @@ v0.2 (not yet released)
 - rename 'trends' folder to 'dashboard'
 - issue #17 : add parameterized (repo name, interval) build status badge to dashboard
 - issue #18 : link to project website and project repo on dashboard
+- run queries in GMT timezone
 
 before v0.2, dashboard was part of the Buildtime Trend client repo. A seperate
 repo was created for the dashboard, see issue #58
